# MenonDemosaicing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  menon.hpp
src/decision/: posteriori.cpp  posteriori.hpp
src/interpolation/: directional.cpp  directional.hpp  filter.hpp  rb.cpp  rb.hpp
src/io/format/: tiff.cpp  tiff.hpp
src/io/support/: bitmap.hpp
src/refining/: lowpass.cpp  lowpass.hpp  refine.cpp  refine.hpp
src/support/: bitmap.hpp  bitmap_arithmetics.cpp  bitmap_arithmetics.hpp  pf.hpp  rgb.cpp  rgb.hpp
test/: white.tiff  white_1px.tiff
